--- a/index.html
+++ b/index.html
@@ -53,19 +53,11 @@
         <nav class="navigation d-flex align-items-center">
           <div class="container">
             <div class="row">
-              <div class="col-2"><a class="logo" href="index-2.html"><img src="assets/images/logo.png" alt=""></a></div>
+              <div class="col-2"><a class="logo" href="index.html"><img src="assets/images/logo.png" alt=""></a></div>
               <div class="col-8">
                 <div class="navgition-menu d-flex align-items-center justify-content-center">
                   <ul class="mb-0">
-                    <li class="toggleable"> <a class="menu-item active" href="index-2.html">Home</a>
-                      <ul class="sub-menu">
-                        <li><a href="index-2.html">Homepage 1</a></li>
-                        <li><a href="homepage02.html">Homepage 2</a></li>
-                        <li><a href="homepage03.html">Homepage 3</a></li>
-                        <li><a href="homepage04.html">Homepage 4</a></li>
-                        <li><a href="homepage05.html">Homepage 5</a></li>
-                      </ul>
-                    </li>
+                    <li class="toggleable"><a class="menu-item active" href="index.html">Home</a></li>
                     <li class="toggleable"> <a class="menu-item" href="shop_grid%2blist_3col.html">Shop</a>
                       <ul class="sub-menu shop d-flex">
                         <div class="nav-column">
