--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="assets/css/icomoon.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
+    <!-- local css by Shuvo -->
+    <link rel="stylesheet" href="assets/css/adjusted_style.css">
   </head>
   <body>
     <div id="main">
