Adjusted color and logo

--- a/shop_grid+list_3col.html
+++ b/shop_grid+list_3col.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="assets/css/icomoon.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
+    <!-- local css by Shuvo -->
+    <link rel="stylesheet" href="assets/css/adjusted_style.css">
   </head>
   <link rel="stylesheet" href="../../../code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <body>
