Fixed logo and responding link

--- a/shop_detail.html
+++ b/shop_detail.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="assets/css/icomoon.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
+    <!-- local css by Shuvo -->
+    <link rel="stylesheet" href="assets/css/adjusted_style.css">
+    <!-- end of local script -->
   </head>
   <body>
     <div id="main">
@@ -134,7 +137,7 @@
                       <ul class="mb-0 d-flex flex-column">
                         <li class="toggleable"> <a class="menu-item active" href="index-2.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="index-2.html">Homepage 1</a></li>
+                            <li><a href="index.html">Homepage 1</a></li>
                             <li><a href="homepage02.html">Homepage 2</a></li>
                             <li><a href="homepage03.html">Homepage 3</a></li>
                             <li><a href="homepage04.html">Homepage 4</a></li>
@@ -255,7 +258,7 @@
       <div class="ogami-breadcrumb">
         <div class="container">
           <ul>
-            <li> <a class="breadcrumb-link" href="index-2.html"> <i class="fas fa-home"></i>Home</a></li>
+            <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
             <li> <a class="breadcrumb-link" href="shop_grid%2blist_3col.html">Shop</a></li>
             <li> <a class="breadcrumb-link active" href="shop_detail.html">Shop Detail Sidebar</a></li>
           </ul>
