--- a/shop_grid+list_3col.html
+++ b/shop_grid+list_3col.html
@@ -62,7 +62,7 @@
                   <ul class="mb-0">
                     <li class="toggleable"> <a class="menu-item" href="index-2.html">Home</a>
                       <ul class="sub-menu">
-                        <li><a href="index-2.html">Homepage 1</a></li>
+                        <li><a href="index.html">Homepage 1</a></li>
                         <li><a href="homepage02.html">Homepage 2</a></li>
                         <li><a href="homepage03.html">Homepage 3</a></li>
                         <li><a href="homepage04.html">Homepage 4</a></li>
@@ -137,7 +137,7 @@
                       <ul class="mb-0 d-flex flex-column">
                         <li class="toggleable"> <a class="menu-item active" href="index-2.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="index-2.html">Homepage 1</a></li>
+                            <li><a href="index.html">Homepage 1</a></li>
                             <li><a href="homepage02.html">Homepage 2</a></li>
                             <li><a href="homepage03.html">Homepage 3</a></li>
                             <li><a href="homepage04.html">Homepage 4</a></li>
@@ -258,8 +258,8 @@
       <div class="ogami-breadcrumb">
         <div class="container">
           <ul>
-            <li> <a class="breadcrumb-link" href="index-2.html"> <i class="fas fa-home"></i>Home</a></li>
-            <li> <a class="breadcrumb-link active" href="index-2.html">Shop</a></li>
+            <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
+            <li> <a class="breadcrumb-link active" href="index.html">Shop</a></li>
           </ul>
         </div>
       </div>
