fixed index-2 Vs index confliction

--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -59,9 +59,9 @@
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
                       <ul class="mb-0 d-flex flex-column">
-                        <li class="toggleable"> <a class="menu-item active" href="index-2.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="index-2.html">Homepage 1</a></li>
+                            <li><a href="index.html">Homepage 1</a></li>
                             <li><a href="homepage02.html">Homepage 2</a></li>
                             <li><a href="homepage03.html">Homepage 3</a></li>
                             <li><a href="homepage04.html">Homepage 4</a></li>
@@ -126,7 +126,7 @@
         <nav class="navigation navigation_v2 d-flex align-items-center">
           <div class="ogami-container-fluid">
             <div class="row align-items-xxl-center">
-              <div class="col-12 col-xl-6 col-xxxl-1 text-lg-center text-xl-left order-xl-1 order-xxxl-1"><a class="logo" href="index-2.html"><img src="assets/images/logo.png" alt=""></a></div>
+              <div class="col-12 col-xl-6 col-xxxl-1 text-lg-center text-xl-left order-xl-1 order-xxxl-1"><a class="logo" href="index.html"><img src="assets/images/logo.png" alt=""></a></div>
               <div class="col-12 col-md-12 col-xl-6 col-xxxl-4 order-xl-3 order-xxxl-2">
                 <div class="navigation-filter">
                   <div class="website-search_v2">
@@ -160,9 +160,9 @@
               <div class="col-8 col-xl-6 col-xxxl-5 order-xl-4 order-xxxl-3">
                 <div class="navgition-menu d-flex align-items-center justify-content-center justify-content-xl-center">
                   <ul class="mb-0">
-                    <li class="toggleable"> <a class="menu-item" href="index-2.html">Home</a>
+                    <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
                       <ul class="sub-menu">
-                        <li><a href="index-2.html">Homepage 1</a></li>
+                        <li><a href="index.html">Homepage 1</a></li>
                         <li><a href="homepage02.html">Homepage 2</a></li>
                         <li><a href="homepage03.html">Homepage 3</a></li>
                         <li><a href="homepage04.html">Homepage 4</a></li>
@@ -231,7 +231,7 @@
       <div class="ogami-breadcrumb">
         <div class="ogami-container-fluid">
           <ul>
-            <li> <a class="breadcrumb-link" href="index-2.html"> <i class="fas fa-home"></i>Home</a></li>
+            <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
             <li> <a class="breadcrumb-link" href="shop_grid%2blist_3col.html">Shop</a></li>
             <li> <a class="breadcrumb-link active" href="#">Shop Detail Fullwidth</a></li>
           </ul>
