--- a/shop_grid+list_3col.html
+++ b/shop_grid+list_3col.html
@@ -56,11 +56,11 @@
         <nav class="navigation d-flex align-items-center">
           <div class="container">
             <div class="row">
-              <div class="col-2"><a class="logo" href="index-2.html"><img src="assets/images/logo.png" alt=""></a></div>
+              <div class="col-2"><a class="logo" href="index.html"><img src="assets/images/logo.png" alt=""></a></div>
               <div class="col-8">
                 <div class="navgition-menu d-flex align-items-center justify-content-center">
                   <ul class="mb-0">
-                    <li class="toggleable"> <a class="menu-item" href="index-2.html">Home</a>
+                    <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
                       <ul class="sub-menu">
                         <li><a href="index.html">Homepage 1</a></li>
                         <li><a href="homepage02.html">Homepage 2</a></li>
@@ -135,7 +135,7 @@
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
                       <ul class="mb-0 d-flex flex-column">
-                        <li class="toggleable"> <a class="menu-item active" href="index-2.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="index.html">Homepage 1</a></li>
                             <li><a href="homepage02.html">Homepage 2</a></li>
