--- a/about_us.html
+++ b/about_us.html
@@ -54,13 +54,13 @@
         <nav class="navigation d-flex align-items-center">
           <div class="container">
             <div class="row">
-              <div class="col-2"><a class="logo" href="index-2.html"><img src="assets/images/logo.png" alt=""></a></div>
+              <div class="col-2"><a class="logo" href="index.html"><img src="assets/images/logo.png" alt=""></a></div>
               <div class="col-8">
                 <div class="navgition-menu d-flex align-items-center justify-content-center">
                   <ul class="mb-0">
-                    <li class="toggleable"> <a class="menu-item" href="index-2.html">Home</a>
+                    <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
                       <ul class="sub-menu">
-                        <li><a href="index-2.html">Homepage 1</a></li>
+                        <li><a href="index.html">Homepage 1</a></li>
                         <li><a href="homepage02.html">Homepage 2</a></li>
                         <li><a href="homepage03.html">Homepage 3</a></li>
                         <li><a href="homepage04.html">Homepage 4</a></li>
@@ -133,9 +133,9 @@
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
                       <ul class="mb-0 d-flex flex-column">
-                        <li class="toggleable"> <a class="menu-item active" href="index-2.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="index-2.html">Homepage 1</a></li>
+                            <li><a href="index.html">Homepage 1</a></li>
                             <li><a href="homepage02.html">Homepage 2</a></li>
                             <li><a href="homepage03.html">Homepage 3</a></li>
                             <li><a href="homepage04.html">Homepage 4</a></li>
@@ -256,7 +256,7 @@
       <div class="ogami-breadcrumb">
         <div class="container">
           <ul>
-            <li> <a class="breadcrumb-link" href="index-2.html"> <i class="fas fa-home"></i>Home</a></li>
+            <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
             <li> <a class="breadcrumb-link active" href="#">About us</a></li>
           </ul>
         </div>
