added icons to the department items

--- a/shop_detail.html
+++ b/shop_detail.html
@@ -257,17 +257,17 @@
                   </div>
                   <div class="department_bottom">
                     <ul>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Fresh Meat</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Vegetables</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Fruit & Nut Gifts</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Fresh Berries</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Ocean Foods</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Butter & Eggs</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Fastfood</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Fresh Onion</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Papayaya & Crisps</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Oatmeal</a></li>
-                      <li> <a class="department-link" href="shop_grid%2blist_3col.html">Fresh Bananas</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-1"> </i>Fresh Meat</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-2"> </i>Vegetables</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-3"> </i>Fruit & Nut Gifts</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-4"> </i>Fresh Berries</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-5"> </i>Ocean Foods</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-6"> </i>Butter & Eggs</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-7"> </i>Fastfood</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-8"> </i>Fresh Onion</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-9"> </i>Papayaya & Crisps</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-10"> </i>Oatmeal</a></li>
+                      <li> <a class="department-link" href="shop_grid%2blist_3col.html"><i class="icon-11"> </i>Fresh Bananas</a></li>
                     </ul>
                   </div>
                 </div>
