Added card to the product view

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-8 col-md-8 col-lg-5 col-xl-7">
+                        <div class="col-8 col-md-8 col-lg-5 col-xl-7 search-area">
                           <div class="search-input">
                             <input class="no-round-input no-border" type="text" placeholder="What do you need">
                           </div>
