--- a/shop_detail.html
+++ b/shop_detail.html
@@ -305,10 +305,10 @@
                     <div class="img_control"></div>
                   </div>
                   <div class="col-12 col-lg-6">
-                    <div class="shop-detail_info">
+                    <div class="shop-detail_info card">
                       <h5 class="product-type color-type">Oranges</h5>
                       <h2 class="product-name">Pure Pineapple</h2>
-                      <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </p><a class="product-more" href="#">View more <i class="arrow_carrot-2right"></i></a>
+                      <p class="product-describe">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </p><a class="product-more" href="#tab-1">View more <i class="arrow_carrot-2right"></i></a>
                       <p class="delivery-status">Free delivery</p>
                       <div class="price-rate">
                         <h3 class="product-price"> 
