--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@
       </footer>
       <!-- End footer-->
     </div>
-    <script src="../../../cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/js/cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/js/jquery-ui.min.js"></script>
     <script src="assets/js/jquery.countdown.min.js"></script>
     <script src="assets/js/slick.min.js"></script>
