--- a/shop_cart.html
+++ b/shop_cart.html
@@ -21,6 +21,8 @@
     <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
   </head>
   <link rel="stylesheet" href="../../../code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <!-- local css by Shuvo -->
+  <link rel="stylesheet" href="assets/css/adjusted_style.css">
   <body>
     <div id="main">
       <header>
