--- a/special_offer.html
+++ b/special_offer.html
@@ -372,6 +372,102 @@
             </div>
             <div class="col-xl-9">
               <div class="shop-grid-list">
+                <!-- slider for offer -->
+                <div class="offer-slider">
+                    
+      <div class="slider">
+        <div class="full-fluid">
+          <div class="slider_wrapper">
+            <div class="slider-block" style="background-image: url('assets/images/special_offer/cow1.jpg')">
+              <div class="slider-content">
+                <div class="container">
+                  <div class="row align-items-center justify-content-center">
+                    <div class="col-12 col-md-5 col-xl-6">
+                      <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+                        <h5 data-animation="fadeInUp" data-delay=".2s">উন্নত জাতের গরু</h5>
+                        <h1 data-animation="fadeInUp" data-delay=".3s">গরু</h1>
+                        <h3 data-animation="fadeInUp" data-delay=".4s">$14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop_grid%2blist_3col.html" data-animation="fadeInUp" data-delay=".4s">কিনে নিন </a>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                      <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img src="assets/images/special_offer/cow_face.webp" alt="">
+                        <div class="prallax-img">
+                          <div id="img-block"><img class="img" src="assets/images/homepage01/slider_background_2.jpg/homepage01/slider_img_1.png" alt="" data-depth="1"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slider-block" style="background-image: url('assets/images/special_offer/cow2.jpg')">
+              <div class="slider-content"> 
+                <div class="container">
+                  <div class="row align-items-center justify-content-center">
+                    <div class="col-12 col-md-5 col-xl-6">
+                      <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+                        <h5 data-animation="fadeInUp" data-delay=".2s">উন্নত গরু</h5>
+                        <h1 data-animation="fadeInUp" data-delay=".3s">জাতের গরু</h1>
+                        <h3 data-animation="fadeInUp" data-delay=".4s">$14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop_grid%2blist_3col.html" data-animation="fadeInUp" data-delay=".4s">কিনে নিন </a>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                      <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img" src="assets/images/special_offer/cow_face.webp" alt=""></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slider-block" style="background-image: url('assets/images/special_offer/cow1.jpg')">
+              <div class="slider-content"> 
+                <div class="container">
+                  <div class="row align-items-center justify-content-center">
+                    <div class="col-12 col-md-5 col-xl-6">
+                      <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+                        <h5 data-animation="fadeInUp" data-delay=".2s">উন্নত</h5>
+                        <h1 data-animation="fadeInUp" data-delay=".3s">জাতের গরু</h1>
+                        <h3 data-animation="fadeInUp" data-delay=".4s">$14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop_grid%2blist_3col.html" data-animation="fadeInUp" data-delay=".4s">কিনে নিন </a>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                      <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img" src="assets/images/special_offer/cow_face.webp" alt=""></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="benefit-block">
+            <div class="container">
+              <div class="our-benefits">
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <div class="benefit-detail d-flex flex-column align-items-center"><img class="benefit-img" src="assets/images/homepage01/benefit-icon1.png" alt="">
+                      <h5 class="benefit-title">উন্নত জাতের গরু </h5>
+                      <p class="benefit-describle">মাংসের মূল্য এবং চাহিদা বেশি</p>
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <div class="benefit-detail d-flex flex-column align-items-center"><img class="benefit-img" src="assets/images/homepage01/benefit-icon2.png" alt="">
+                      <h5 class="benefit-title">জাতের গরু </h5>
+                      <p class="benefit-describle">মাংসের মূল্য বেশি</p>
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <div class="benefit-detail boderless d-flex flex-column align-items-center"><img class="benefit-img" src="assets/images/homepage01/benefit-icon3.png" alt="">
+                      <h5 class="benefit-title">উন্নত গরু </h5>
+                      <p class="benefit-describle">মাংসের চাহিদা বেশি</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End slider-->
+                </div>
+                <!-- end of slider -->
                 <div class="shop-products">
                   <div class="shop-products_top mini-tab-title underline">
                     <div class="row align-items-center">
