Fixed issues with modal

--- a/shop_grid+list_3col.html
+++ b/shop_grid+list_3col.html
@@ -22,7 +22,7 @@
     <!-- local css by Shuvo -->
     <link rel="stylesheet" href="assets/css/adjusted_style.css">
   </head>
-  <link rel="stylesheet" href="../../../code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="assets/css/jquery-ui.css">
   <body>
     <div id="main">
       <header>
