--- a/index.html
+++ b/index.html
@@ -197,8 +197,17 @@
                   <div class="department-menu d-flex justify-content-between align-items-center"><i class="fas fa-bars"></i>All departments<span><i class="arrow_carrot-up"></i></span></div>
                   <div class="department-dropdown-menu down">
                     <ul>
-                      <li><a href="shop_grid%2blist_3col.html"> <i class="icon-1"></i>Fresh Meat</a></li>
+                      <!-- Nested div for requirement -->                      
+                      <div class="vertical-nav">
+                        <li><a href=""><i class="icon-1"></i>Groceries</a>
+                          <i class="fa fa-chevron-right float-right" aria-hidden="true"></i>
+                        <ul class="sub-menu">
+                          <li><a href="shop_grid%2blist_3col.html"> <i class="icon-2"></i>House Holds</a></li>
+                          <li><a href="shop_grid%2blist_3col.html"> <i class="icon-3"></i>Fruit & Nut Gifts</a></li>
+                            </ul></li>
+                        </div>
                       <li><a href="shop_grid%2blist_3col.html"> <i class="icon-2"></i>Vegetables</a></li>
+                      
                       <li><a href="shop_grid%2blist_3col.html"> <i class="icon-3"></i>Fruit & Nut Gifts</a></li>
                       <li><a href="shop_grid%2blist_3col.html"> <i class="icon-4"></i>Fresh Berries</a></li>
                       <li><a href="shop_grid%2blist_3col.html"> <i class="icon-5"></i>Ocean Foods</a></li>
