js can now handle mobile touches

--- a/index.html
+++ b/index.html
@@ -1508,6 +1508,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js'></script>
     
     <script src="assets/js/slider.js"></script>
+    <script src="assets/js/mobile-menu-listener.js"></script>
   </body>
 
 <!-- Mirrored from afinda.vn/html/Ogami/homepage05.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Jun 2020 12:00:51 GMT -->
